algumas alteracoes no codigo, passei a data para um array de strings, assim nao é necessária a criaçao de uma variavel nova, agora a funçao result tem seus primeiros comandos (EBA!)